[package]
name = "llvm-bundler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = [
    "blocking",
    "default-tls",
    "http2",
], default-features = false }
liblzma = { version = "0.4.1", features = ["static", "parallel"] }
tar = { version = "0.4" }
bytes = { version = "1.10" }
