[package]
name = "llvm-bundler-rs"
version = "0.0.3"
edition = "2024"

[features]
bundled = ["dep:reqwest", "dep:liblzma", "dep:tar", "dep:bytes", "dep:dirs"]

[dependencies]
reqwest = { version = "0.12.15", features = [
    "blocking",
    "default-tls",
    "http2",
], default-features = false, optional = true}
liblzma = { version = "0.4.1", features = ["static", "parallel"], optional = true}
tar = { version = "0.4", optional = true}
bytes = { version = "1.10", optional = true}
dirs = { version = "6.0", optional = true}
regex = "1.11.1"
